--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<div class="container">
 
 				<div class="title-custom">
-					<h3 class="h3-black">CONTACT</h3>
+					<h3 class="h3-black">CONTACT ME</h3>
 					<hr class="line-star black">
 				</div>
 
