--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<img src="img/profile.png" alt="">
 
 					<div class="intro-text">
-						<h1>START BOOTSTRAP</h1>
+						<h1>LÙN LÙN LÙN</h1>
 						<hr class="line-star white">
 						<p>Web Developer - Graphic Artist - User Experience Designer</p>
 					</div>
