--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 			<div class="logo">
 				<a href="">
-					NHÍM LÙN
+					START BOOTSTRAP
 				</a>
 			</div>
 
@@ -99,7 +99,7 @@
 					<img src="img/profile.png" alt="">
 
 					<div class="intro-text">
-						<h1>LÙN LÙN LÙN</h1>
+						<h1>START BOOTSTRAP</h1>
 						<hr class="line-star white">
 						<p>Web Developer - Graphic Artist - User Experience Designer</p>
 					</div>
